--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,10 +1,44 @@
-$color-icon:rgb(63, 212, 223);
-$color-background: rgb(207, 50, 50);
-$justify-texto: center;
-$color-fondo: white;
-$justify-contenido: space-evenly;
-$align-items: center;
-$justify-content: space-around;
-$aliniar-texto: center;
-$justificar-contenido:center;
-$tipografia-general:'Rubik';
+/* Variables de fuente */
+$font-fraunces: 'Fraunces', serif;
+$font-montserrat: 'Montserrat', sans-serif;
+$font-roboto: 'Roboto', sans-serif;
+$font-roboto-mono: 'Roboto Mono', monospace;
+$font-rubik: 'Rubik', sans-serif;
+
+/* Variables de color */
+$color-white: #fff;
+$color-background: linear-gradient(to right, rgba(0, 0, 0, 0.642), rgba(0, 0, 0, 0.642));
+$color-nav: $color-white;
+$color-red: rgb(207, 50, 50);
+$color-blue: rgb(63, 212, 223);
+
+/* Variables de animación */
+$keyframe-float: float;
+$animation-speed: 4s;
+$animation-timing-function: ease-in-out;
+$animation-iteration-count: infinite;
+
+/* Variables de tamaño */
+$height-100vh: 100vh;
+$height-70vh: 70vh;
+$height-4rem: 4rem;
+$width-100: 100%;
+
+/* Variables de borde */
+$border-box: border-box;
+$border-2px: 2px;
+$border-none: none;
+
+/* Variables de efecto de fondo */
+$background-size-cover: cover;
+$background-attachment-fixed: fixed;
+$background-position-center: center;
+$background-repeat-no-repeat: no-repeat;
+
+/* Variables de estilo */
+$text-align-center: center;
+$display-flex: flex;
+$flex-direction-column: column;
+$justify-content-space-evenly: space-evenly;
+$align-items-center: center;
+$position-fixed: fixed;
